# rag-trilogy

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  conftest.py  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  eval_gate.yml
.venv2/: pyvenv.cfg
monitoring/: prometheus.yml
monitoring/alerts/: quality_regression.yml
monitoring/grafana/: provisioning_dashboards.yml
monitoring/grafana/dashboards/: cost_tracker.json  quality_drift.json  rag_overview.json
scripts/: benchmark_models.py  ingest_docs.py  run_eval.py
src/: config.py  logger.py
src/api/: deps.py  main.py
src/api/middleware/: rate_limit.py  tracing.py
src/api/routes/: health.py  ingest.py  query.py
src/evaluation/: benchmark.py  dataset.py  ragas_eval.py  regression_gate.py
src/generation/: chain.py  llm_client.py  prompt_templates.py
src/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
src/monitoring/: cost_tracker.py  metrics.py  quality_metrics.py  tracer.py
src/retrieval/: bm25_store.py  hybrid.py  reranker.py  vector_store.py
tests/: conftest.py
tests/eval/: golden_dataset.json
tests/integration/: test_api_endpoints.py  test_hybrid_pipeline.py
tests/unit/: test_citation_enforcement.py  test_cost_tracker.py  test_hybrid_retrieval.py  test_regression_gate.py  test_reranker.py
