[tool.poetry]
name = "rag-trilogy"
version = "1.0.0"
description = "Production-grade hybrid RAG system with local SLMs and observability"
authors = ["AI Engineer <engineer@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
qdrant-client = "^1.8.0"
rank-bm25 = "^0.2.2"
sentence-transformers = "^2.6.0"
openai = "^1.14.0"
anthropic = "^0.21.0"
httpx = "^0.27.0"
structlog = "^24.1.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.23.0"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-exporter-otlp = "^1.23.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
tqdm = "^4.66.2"
jinja2 = "^3.1.3"
python-docx = "^1.1.0"
pypdf = "^4.1.0"
ragas = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-cov = "^4.1.0"
respx = "^0.21.1"
mypy = "^1.9.0"
bandit = "^1.7.8"
cyclonedx-bom = "^4.3.4"
locust = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
